--- a/web-automation/serenity.properties
+++ b/web-automation/serenity.properties
@@ -1,3 +1,3 @@
 webdriver.driver=chrome
-webdriver.chrome.driver=chromedriver.exe
+webdriver.chrome.driver=chromedriver
 serenity.take.screenshots=AFTER_EACH_STEP
